--- a/contato.html
+++ b/contato.html
@@ -154,6 +154,7 @@
         <img src="/public/img/logo-branco.png" alt="Logo Footer" />
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
       </div>
+      <p style="color: #fff">Footer</p>
     </footer>
   </body>
 </html>
