--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <img src="/public/img/logo-branco.png" alt="Logo Footer" />
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
       </div>
+      <p style="color: #fff">Footer</p>
     </footer>
   </body>
 </html>
